[gd_scene load_steps=6 format=3 uid="uid://djola15i6rkpm"]

[ext_resource type="Script" path="res://ui.gd" id="1_6fxej"]
[ext_resource type="LabelSettings" uid="uid://6als3mt3a4le" path="res://label_setting.tres" id="1_ilyco"]
[ext_resource type="FontFile" uid="uid://by32aayt15n0k" path="res://fonts/Xolonium-Regular.ttf" id="2_guc8p"]
[ext_resource type="PackedScene" uid="uid://c34olt6qn5xfs" path="res://pause.tscn" id="4_k255n"]

[sub_resource type="LabelSettings" id="LabelSettings_6fp2g"]
font_size = 64

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_6fxej")

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
text = "0"
label_settings = ExtResource("1_ilyco")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -78.5
offset_right = 240.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_guc8p")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]3[/center]
"
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
offset_left = 119.0
offset_top = 487.0
offset_right = 363.0
offset_bottom = 587.0
theme_override_fonts/font = ExtResource("2_guc8p")
theme_override_font_sizes/font_size = 64
text = "START"
flat = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Title" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -200.0
offset_right = 240.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_guc8p")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[wave][center]Dodge the Creeps![/center][/wave]"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Pause" parent="." instance=ExtResource("4_k255n")]

[node name="PauseLabel" type="Label" parent="."]
visible = false
top_level = true
offset_top = 320.0
offset_right = 512.0
offset_bottom = 405.0
theme_override_font_sizes/font_size = 64
text = "PAUSED"
label_settings = SubResource("LabelSettings_6fp2g")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="has_paused" from="Pause" to="." method="_on_pause_has_paused"]
